            Added: OSDMenuGetNrOfLines() to query the current number of lines
            Fixed: The ScrollBar graphics contained various pixels with slightly wrong color
            Added: New cursor graphics that are necessary for different line heights (i.e. different number of lines)
            Fixed: OSDMenuSetCursor() doesn't draw the new cursor
            Added: OSDMemoFormatText() to allow a dynamic change of the font size (i.e. the number of lines)
            Added: TMSOSDMenu memo demo
            Modified: TMSOSDMenu menu demo demonstrates dynamic change of both the font size (i.e. the number of lines) and the cursor type
            Modified: Replace the previous WaitSpinner with one that (unlike a circular one) looks undistorted on the 5:4 OSD
            Modified: Release date
2019-09-26  Fixed: Potential out-of-bounds read in StringEndsWith()
2019-10-03  Fixed: FMUC_PutStringAA() and FM_PutStringAA(): both drew one pixel line too high
2019-10-04  Fixed: OSDMenuPutS() made private again (due to the use of FONTYOFFSET)
            Added: OSDMenuPutString() (user-usable replacement for OSDMenuPutS())
            Modified: OSDMenuGetH() renamed OSDMenuGetStringHeight()
            Modified: Rename OSDMenuGetW() OSDMenuGetStringWidth() and define OSDMenuGetW as an alias
            Fixed: Check ItemIndex for potential out-of-bounds array access
2019-10-08  Modified: Return type of OSDMenuGetStringHeight() and OSDMenuGetStringWidth() changed from integer to dword
2019-10-16  Added: OSDMenuItemPassDrawing() to allow a user-controlled item drawing
            Added: TMSOSDMenu PassDrawing demo
            Added: Cursor type CT_Hide to hide the cursor
            Added: OSDMenuButtonModifyText() to allow label replacement without graphic position change
            Modified: Release date
2019-10-18  Fixed: Potential out-of-bounds access in OSDMenuButtonAdd()
            Fixed: Potential null pointer usage in OSDMenuMessageBoxButtonAdd()